// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Element Shallow render of the element with special label style. 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Element
    fontSize={12}
    label="Foo"
    labelStyle={
      Object {
        "color": "red",
      }
    }
    objectPath=""
    onValueChange={[Function]}
    specialLabels={Object {}}
    textboxStyle={Object {}}
    value="Bar"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <p
          htmlFor="id_0.9858485626028084"
          style={
            Object {
              "color": "red",
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 0,
              "paddingTop": 10,
            }
          }
        >
          FOO
        </p>,
        <Textbox
          id="id_0.9858485626028084"
          maxLength={null}
          onChange={[Function]}
          onClickOutside={[Function]}
          placeholder=""
          style={
            Object {
              "fontFamily": "sans-serif",
            }
          }
          textboxType="text"
          value="Bar"
          wrapperStyle={Object {}}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "FOO",
          "htmlFor": "id_0.9858485626028084",
          "style": Object {
            "color": "red",
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "marginBottom": 0,
            "marginTop": 0,
            "paddingTop": 10,
          },
        },
        "ref": null,
        "rendered": "FOO",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "id": "id_0.9858485626028084",
          "maxLength": null,
          "onChange": [Function],
          "onClickOutside": [Function],
          "placeholder": "",
          "style": Object {
            "fontFamily": "sans-serif",
          },
          "textboxType": "text",
          "value": "Bar",
          "wrapperStyle": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <p
            htmlFor="id_0.9858485626028084"
            style={
              Object {
                "color": "red",
                "fontFamily": "sans-serif",
                "fontSize": 12,
                "marginBottom": 0,
                "marginTop": 0,
                "paddingTop": 10,
              }
            }
          >
            FOO
          </p>,
          <Textbox
            id="id_0.9858485626028084"
            maxLength={null}
            onChange={[Function]}
            onClickOutside={[Function]}
            placeholder=""
            style={
              Object {
                "fontFamily": "sans-serif",
              }
            }
            textboxType="text"
            value="Bar"
            wrapperStyle={Object {}}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "FOO",
            "htmlFor": "id_0.9858485626028084",
            "style": Object {
              "color": "red",
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 0,
              "paddingTop": 10,
            },
          },
          "ref": null,
          "rendered": "FOO",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "id": "id_0.9858485626028084",
            "maxLength": null,
            "onChange": [Function],
            "onClickOutside": [Function],
            "placeholder": "",
            "style": Object {
              "fontFamily": "sans-serif",
            },
            "textboxType": "text",
            "value": "Bar",
            "wrapperStyle": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Element Shallow render of the element with special labels. 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Element
    fontSize={12}
    label="Foo"
    labelStyle={Object {}}
    objectPath=""
    onValueChange={[Function]}
    specialLabels={
      Object {
        "Foo": "Bar",
      }
    }
    textboxStyle={Object {}}
    value="Bar"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <p
          htmlFor="id_0.04382965776956915"
          style={
            Object {
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 0,
              "paddingTop": 10,
            }
          }
        >
          Bar
        </p>,
        <Textbox
          id="id_0.04382965776956915"
          maxLength={null}
          onChange={[Function]}
          onClickOutside={[Function]}
          placeholder=""
          style={
            Object {
              "fontFamily": "sans-serif",
            }
          }
          textboxType="text"
          value="Bar"
          wrapperStyle={Object {}}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Bar",
          "htmlFor": "id_0.04382965776956915",
          "style": Object {
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "marginBottom": 0,
            "marginTop": 0,
            "paddingTop": 10,
          },
        },
        "ref": null,
        "rendered": "Bar",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "id": "id_0.04382965776956915",
          "maxLength": null,
          "onChange": [Function],
          "onClickOutside": [Function],
          "placeholder": "",
          "style": Object {
            "fontFamily": "sans-serif",
          },
          "textboxType": "text",
          "value": "Bar",
          "wrapperStyle": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <p
            htmlFor="id_0.04382965776956915"
            style={
              Object {
                "fontFamily": "sans-serif",
                "fontSize": 12,
                "marginBottom": 0,
                "marginTop": 0,
                "paddingTop": 10,
              }
            }
          >
            Bar
          </p>,
          <Textbox
            id="id_0.04382965776956915"
            maxLength={null}
            onChange={[Function]}
            onClickOutside={[Function]}
            placeholder=""
            style={
              Object {
                "fontFamily": "sans-serif",
              }
            }
            textboxType="text"
            value="Bar"
            wrapperStyle={Object {}}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Bar",
            "htmlFor": "id_0.04382965776956915",
            "style": Object {
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 0,
              "paddingTop": 10,
            },
          },
          "ref": null,
          "rendered": "Bar",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "id": "id_0.04382965776956915",
            "maxLength": null,
            "onChange": [Function],
            "onClickOutside": [Function],
            "placeholder": "",
            "style": Object {
              "fontFamily": "sans-serif",
            },
            "textboxType": "text",
            "value": "Bar",
            "wrapperStyle": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Element Shallow render of the element with special textbox style. 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Element
    fontSize={12}
    label="Foo"
    labelStyle={Object {}}
    objectPath=""
    onValueChange={[Function]}
    specialLabels={Object {}}
    textboxStyle={
      Object {
        "color": "red",
      }
    }
    value="Bar"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <p
          htmlFor="id_0.12499727400439786"
          style={
            Object {
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 0,
              "paddingTop": 10,
            }
          }
        >
          FOO
        </p>,
        <Textbox
          id="id_0.12499727400439786"
          maxLength={null}
          onChange={[Function]}
          onClickOutside={[Function]}
          placeholder=""
          style={
            Object {
              "color": "red",
              "fontFamily": "sans-serif",
            }
          }
          textboxType="text"
          value="Bar"
          wrapperStyle={Object {}}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "FOO",
          "htmlFor": "id_0.12499727400439786",
          "style": Object {
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "marginBottom": 0,
            "marginTop": 0,
            "paddingTop": 10,
          },
        },
        "ref": null,
        "rendered": "FOO",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "id": "id_0.12499727400439786",
          "maxLength": null,
          "onChange": [Function],
          "onClickOutside": [Function],
          "placeholder": "",
          "style": Object {
            "color": "red",
            "fontFamily": "sans-serif",
          },
          "textboxType": "text",
          "value": "Bar",
          "wrapperStyle": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <p
            htmlFor="id_0.12499727400439786"
            style={
              Object {
                "fontFamily": "sans-serif",
                "fontSize": 12,
                "marginBottom": 0,
                "marginTop": 0,
                "paddingTop": 10,
              }
            }
          >
            FOO
          </p>,
          <Textbox
            id="id_0.12499727400439786"
            maxLength={null}
            onChange={[Function]}
            onClickOutside={[Function]}
            placeholder=""
            style={
              Object {
                "color": "red",
                "fontFamily": "sans-serif",
              }
            }
            textboxType="text"
            value="Bar"
            wrapperStyle={Object {}}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "FOO",
            "htmlFor": "id_0.12499727400439786",
            "style": Object {
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 0,
              "paddingTop": 10,
            },
          },
          "ref": null,
          "rendered": "FOO",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "id": "id_0.12499727400439786",
            "maxLength": null,
            "onChange": [Function],
            "onClickOutside": [Function],
            "placeholder": "",
            "style": Object {
              "color": "red",
              "fontFamily": "sans-serif",
            },
            "textboxType": "text",
            "value": "Bar",
            "wrapperStyle": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Element Shallow render of the element with specific font size. 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Element
    fontSize={12}
    label="Foo"
    labelStyle={Object {}}
    objectPath=""
    onValueChange={[Function]}
    specialLabels={Object {}}
    textboxStyle={Object {}}
    value="Bar"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <p
          htmlFor="id_0.26775032666966836"
          style={
            Object {
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 0,
              "paddingTop": 10,
            }
          }
        >
          FOO
        </p>,
        <Textbox
          id="id_0.26775032666966836"
          maxLength={null}
          onChange={[Function]}
          onClickOutside={[Function]}
          placeholder=""
          style={
            Object {
              "fontFamily": "sans-serif",
            }
          }
          textboxType="text"
          value="Bar"
          wrapperStyle={Object {}}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "FOO",
          "htmlFor": "id_0.26775032666966836",
          "style": Object {
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "marginBottom": 0,
            "marginTop": 0,
            "paddingTop": 10,
          },
        },
        "ref": null,
        "rendered": "FOO",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "id": "id_0.26775032666966836",
          "maxLength": null,
          "onChange": [Function],
          "onClickOutside": [Function],
          "placeholder": "",
          "style": Object {
            "fontFamily": "sans-serif",
          },
          "textboxType": "text",
          "value": "Bar",
          "wrapperStyle": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <p
            htmlFor="id_0.26775032666966836"
            style={
              Object {
                "fontFamily": "sans-serif",
                "fontSize": 12,
                "marginBottom": 0,
                "marginTop": 0,
                "paddingTop": 10,
              }
            }
          >
            FOO
          </p>,
          <Textbox
            id="id_0.26775032666966836"
            maxLength={null}
            onChange={[Function]}
            onClickOutside={[Function]}
            placeholder=""
            style={
              Object {
                "fontFamily": "sans-serif",
              }
            }
            textboxType="text"
            value="Bar"
            wrapperStyle={Object {}}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "FOO",
            "htmlFor": "id_0.26775032666966836",
            "style": Object {
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 0,
              "paddingTop": 10,
            },
          },
          "ref": null,
          "rendered": "FOO",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "id": "id_0.26775032666966836",
            "maxLength": null,
            "onChange": [Function],
            "onClickOutside": [Function],
            "placeholder": "",
            "style": Object {
              "fontFamily": "sans-serif",
            },
            "textboxType": "text",
            "value": "Bar",
            "wrapperStyle": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Element Shallow render of the element. Basic render, no props. 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Element
    fontSize={12}
    label=""
    labelStyle={Object {}}
    objectPath=""
    onValueChange={[Function]}
    specialLabels={Object {}}
    textboxStyle={Object {}}
    value=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <p
          htmlFor="id_0.48191843027333814"
          style={
            Object {
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 0,
              "paddingTop": 10,
            }
          }
        >
          
        </p>,
        <Textbox
          id="id_0.48191843027333814"
          maxLength={null}
          onChange={[Function]}
          onClickOutside={[Function]}
          placeholder=""
          style={
            Object {
              "fontFamily": "sans-serif",
            }
          }
          textboxType="text"
          value=""
          wrapperStyle={Object {}}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "htmlFor": "id_0.48191843027333814",
          "style": Object {
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "marginBottom": 0,
            "marginTop": 0,
            "paddingTop": 10,
          },
        },
        "ref": null,
        "rendered": "",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "id": "id_0.48191843027333814",
          "maxLength": null,
          "onChange": [Function],
          "onClickOutside": [Function],
          "placeholder": "",
          "style": Object {
            "fontFamily": "sans-serif",
          },
          "textboxType": "text",
          "value": "",
          "wrapperStyle": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <p
            htmlFor="id_0.48191843027333814"
            style={
              Object {
                "fontFamily": "sans-serif",
                "fontSize": 12,
                "marginBottom": 0,
                "marginTop": 0,
                "paddingTop": 10,
              }
            }
          >
            
          </p>,
          <Textbox
            id="id_0.48191843027333814"
            maxLength={null}
            onChange={[Function]}
            onClickOutside={[Function]}
            placeholder=""
            style={
              Object {
                "fontFamily": "sans-serif",
              }
            }
            textboxType="text"
            value=""
            wrapperStyle={Object {}}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "htmlFor": "id_0.48191843027333814",
            "style": Object {
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 0,
              "paddingTop": 10,
            },
          },
          "ref": null,
          "rendered": "",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "id": "id_0.48191843027333814",
            "maxLength": null,
            "onChange": [Function],
            "onClickOutside": [Function],
            "placeholder": "",
            "style": Object {
              "fontFamily": "sans-serif",
            },
            "textboxType": "text",
            "value": "",
            "wrapperStyle": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Element Shallow render of the element. Render with value and label. 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Element
    fontSize={12}
    label="Foo"
    labelStyle={Object {}}
    objectPath=""
    onValueChange={[Function]}
    specialLabels={Object {}}
    textboxStyle={Object {}}
    value="Bar"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <p
          htmlFor="id_0.009015355644049983"
          style={
            Object {
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 0,
              "paddingTop": 10,
            }
          }
        >
          FOO
        </p>,
        <Textbox
          id="id_0.009015355644049983"
          maxLength={null}
          onChange={[Function]}
          onClickOutside={[Function]}
          placeholder=""
          style={
            Object {
              "fontFamily": "sans-serif",
            }
          }
          textboxType="text"
          value="Bar"
          wrapperStyle={Object {}}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "FOO",
          "htmlFor": "id_0.009015355644049983",
          "style": Object {
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "marginBottom": 0,
            "marginTop": 0,
            "paddingTop": 10,
          },
        },
        "ref": null,
        "rendered": "FOO",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "id": "id_0.009015355644049983",
          "maxLength": null,
          "onChange": [Function],
          "onClickOutside": [Function],
          "placeholder": "",
          "style": Object {
            "fontFamily": "sans-serif",
          },
          "textboxType": "text",
          "value": "Bar",
          "wrapperStyle": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <p
            htmlFor="id_0.009015355644049983"
            style={
              Object {
                "fontFamily": "sans-serif",
                "fontSize": 12,
                "marginBottom": 0,
                "marginTop": 0,
                "paddingTop": 10,
              }
            }
          >
            FOO
          </p>,
          <Textbox
            id="id_0.009015355644049983"
            maxLength={null}
            onChange={[Function]}
            onClickOutside={[Function]}
            placeholder=""
            style={
              Object {
                "fontFamily": "sans-serif",
              }
            }
            textboxType="text"
            value="Bar"
            wrapperStyle={Object {}}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "FOO",
            "htmlFor": "id_0.009015355644049983",
            "style": Object {
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 0,
              "paddingTop": 10,
            },
          },
          "ref": null,
          "rendered": "FOO",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "id": "id_0.009015355644049983",
            "maxLength": null,
            "onChange": [Function],
            "onClickOutside": [Function],
            "placeholder": "",
            "style": Object {
              "fontFamily": "sans-serif",
            },
            "textboxType": "text",
            "value": "Bar",
            "wrapperStyle": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Element Shallow render of the element. Render with value. 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Element
    fontSize={12}
    label=""
    labelStyle={Object {}}
    objectPath=""
    onValueChange={[Function]}
    specialLabels={Object {}}
    textboxStyle={Object {}}
    value="Foobar"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <p
          htmlFor="id_0.20947825382147056"
          style={
            Object {
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 0,
              "paddingTop": 10,
            }
          }
        >
          
        </p>,
        <Textbox
          id="id_0.20947825382147056"
          maxLength={null}
          onChange={[Function]}
          onClickOutside={[Function]}
          placeholder=""
          style={
            Object {
              "fontFamily": "sans-serif",
            }
          }
          textboxType="text"
          value="Foobar"
          wrapperStyle={Object {}}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "htmlFor": "id_0.20947825382147056",
          "style": Object {
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "marginBottom": 0,
            "marginTop": 0,
            "paddingTop": 10,
          },
        },
        "ref": null,
        "rendered": "",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "id": "id_0.20947825382147056",
          "maxLength": null,
          "onChange": [Function],
          "onClickOutside": [Function],
          "placeholder": "",
          "style": Object {
            "fontFamily": "sans-serif",
          },
          "textboxType": "text",
          "value": "Foobar",
          "wrapperStyle": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <p
            htmlFor="id_0.20947825382147056"
            style={
              Object {
                "fontFamily": "sans-serif",
                "fontSize": 12,
                "marginBottom": 0,
                "marginTop": 0,
                "paddingTop": 10,
              }
            }
          >
            
          </p>,
          <Textbox
            id="id_0.20947825382147056"
            maxLength={null}
            onChange={[Function]}
            onClickOutside={[Function]}
            placeholder=""
            style={
              Object {
                "fontFamily": "sans-serif",
              }
            }
            textboxType="text"
            value="Foobar"
            wrapperStyle={Object {}}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "htmlFor": "id_0.20947825382147056",
            "style": Object {
              "fontFamily": "sans-serif",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 0,
              "paddingTop": 10,
            },
          },
          "ref": null,
          "rendered": "",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "id": "id_0.20947825382147056",
            "maxLength": null,
            "onChange": [Function],
            "onClickOutside": [Function],
            "placeholder": "",
            "style": Object {
              "fontFamily": "sans-serif",
            },
            "textboxType": "text",
            "value": "Foobar",
            "wrapperStyle": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
